--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # Site settings
-title: GuiLing Blog
-SEOTitle: 你的博客 | GuiLing Blog
+title: Your Blog
+SEOTitle: 你的博客 | Your Blog
 header-img: img/home-bg.jpg
-email: heerpeng@gmail.com
+email: huxpro@gmail.com
 description: ""
 keyword: ""
-url: "http://guiling.xyz"              # your host, for absolute URL
+url: "http://huangxuan.me"              # your host, for absolute URL
 baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
 # SNS settings
 RSS: false
-weibo_username:     guiling
-zhihu_username:     guiling
-github_username:    guiling
-#twitter_username:  guiling
-facebook_username:  guiling
+weibo_username:     huxpro
+zhihu_username:     huxpro
+github_username:    huxpro
+#twitter_username:  huxpro
+facebook_username:  huxpro
 
 
 
@@ -62,7 +62,7 @@ duoshuo_share: true                     # set to false if you want to use Commen
 ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 # Google Analytics
 ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: guiling.xyz
+ga_domain: huangxuan.me
 
 
 
@@ -83,7 +83,7 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 friends: [
 {
   title: "Hux Blog",
-  href: "http://guiling.me"
+  href: "http://huangxuan.me"
 },{
   title: "Foo",
   href: "#"
