--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Your Blog
-SEOTitle: 你的博客 | 归零技术实验室
+title: 归零技术实验室
+SEOTitle: 归零技术实验室 | 归零技术实验室
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: erpenghe@gmail.com
 description: ""
 keyword: ""
 url: "http://guiling.xyz"              # your host, for absolute URL
