--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: erpenghe@gmail.com
 description: ""
 keyword: ""
 url: "http://guiling.xyz"              # your host, for absolute URL
-baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "/"         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
