--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 归零技术实验室
-SEOTitle: Laboratory Of Guiling | 归零技术实验室
+SEOTitle: Laboratory Of Guiling | Laboratory Of Guiling
 header-img: img/home-bg.jpg
 email: erpenghe@gmail.com
 description: ""
