--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 归零技术实验室
+title: Laboratory Of Guiling
 SEOTitle: Laboratory Of Guiling | Laboratory Of Guiling
 header-img: img/home-bg.jpg
 email: erpenghe@gmail.com
