--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 # Friends
 friends: [
     {
-        title: "Hux Blog",
+        title: "Guiling Blog",
         href: "http://huangxuan.me"
     },{
         title: "Foo",
